Fixed some homepage layout issues.

--- a/styles/home.css
+++ b/styles/home.css
@@ -26,6 +26,9 @@ complimentary greens: 9FB553    7B8851    61761B    C6DA82    CCDA99
 #intro .blurb p {
     line-height:1.8;
 } 
+#intro .blurb p:first-child {
+    margin-top:0;
+}   
 #intro .blurb p:last-child {
     margin-bottom:0;
 }   
@@ -44,41 +47,25 @@ complimentary greens: 9FB553    7B8851    61761B    C6DA82    CCDA99
   display:table-row;
 }
 
-#intro .background {
-  display:none;
+#intro .download {
   background:rgba(255,255,255,.1);
-  position:absolute;
-  top:0;
-  right:0;
-  height:100%;
+  padding:.75em 1.5em;
 }
-@media (min-width: 758px) {
-  #intro .background {
-    display:block;
-  }
+#intro .download p {
+    margin:0;
 }
-#intro .download-php {
-    text-align:left;
-    margin:0 1.5em;
-    padding:.75em 0;
-}
-#intro .download-php .row-fluid p {
-    margin-top:0;
-    margin-bottom:0;
-}
-#intro .download-php .row-fluid p.notes {
+#intro .download a.notes {
     font-size:.75em;
     line-height:2;
 }
-.download-php a {
+#intro .download a {
     color:#ccc;
     border:0;
 }
-.download-php a.download-link {
-    border:0;
+#intro .download a.download-link {
     color:#fff;
 }
-.download-php a.download-link:before {
+#intro .download a.download-link:before {
     content: "\21AF \2003";
 }
 
